--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -15,6 +15,14 @@ body{
  background-color: aqua;
 
 }
+#repodetail{
+  background-color: aquamarine;
+  padding-bottom: 10em;
+  padding-left: 5em;
+}
+#repodetail p{
+  padding: 1em;
+}
 .nav-comp{
   background-color: aquamarine;
   padding-bottom: 1em;
